# eduvault

./: .env.example  .gitignore  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  SECURITY.md  next.config.mjs  package-lock.json  package.json  vitest.config.mjs
components/: FAQSection.css  FAQSection.jsx
docs/: SOROBAN_DEPLOYMENT.md  WEB3_INTEGRATION.md  architecture.md  backend-contracts.md  contributing.md  deployment.md  disaster-recovery.md  environment-setup.md  issues-backlog.md  openapi.yaml  project-workflows.md  purchase-flow-architecture.md  resource-status-badges.md  soroban-contract-architecture.md  soroban-upgrade-pattern.md  stellar-integration.md  user-flows.md
scripts/: backup-mongodb.mjs  (+4 more)
soroban/: Cargo.toml  README.md  build.sh  run-tests.sh
soroban/contracts/material-registry/: Cargo.toml
soroban/contracts/material-registry/src/: lib.rs  test.rs
soroban/contracts/material-registry/test_snapshots/test/: bootstraps_and_transfers_upgrade_admin.1.json  disabling_asset_blocks_quote_registration.1.json  first_registration_skips_asset_validation.1.json  non_admin_cannot_set_asset_allowed.1.json  registers_material_and_emits_registered_event.1.json  rejects_duplicate_material_id_collisions.1.json  rejects_too_many_payout_shares.1.json  requires_creator_auth_for_updates.1.json  set_asset_allowed_stores_info_and_emits_event.1.json  update_sale_terms_rejects_unapproved_asset.1.json  updates_sale_terms_and_status_and_supports_quote_lookup.1.json
soroban/contracts/purchase-manager/: Cargo.toml
soroban/contracts/purchase-manager/src/: lib.rs  test.rs
(+216 files in other folders)
