[workspace]
members = ["contracts/material-registry", "contracts/purchase-manager"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = "25.3.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
